// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput colors snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="#ff0000"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <span
                class="sc-furvIG bmJRFH"
              >
                <svg
                  aria-label="StopFill"
                  class="StyledIcon-ofa7kd-0 exrjxz"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4,4 L20,4 L20,20 L4,20 L4,4 Z M6,6 L18,6 L18,18 L6,18 L6,6 Z M8,8 L16,8 L16,16 L8,16 L8,8 Z M10,10 L14,10 L14,14 L10,14 L10,10 Z M11,11 L13,11 L13,13 L11,13 L11,11 Z"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColorInput main snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="#000000"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <span
                class="sc-furvIG dvVgCn"
              >
                <svg
                  aria-label="StopFill"
                  class="StyledIcon-ofa7kd-0 exrjxz"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4,4 L20,4 L20,20 L4,20 L4,4 Z M6,6 L18,6 L18,18 L6,18 L6,6 Z M8,8 L16,8 L16,16 L8,16 L8,8 Z M10,10 L14,10 L14,14 L10,14 L10,10 Z M11,11 L13,11 L13,13 L11,13 L11,11 Z"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
